--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Core/Levels/MotionControllerMap.MotionControllerMap
+EditorStartupMap=/Game/Levels/MotionControllerMap.MotionControllerMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Core/Levels/MotionControllerMap.MotionControllerMap
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -66,7 +66,7 @@ TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=False
+r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
