--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,25 +3,68 @@ ProjectID=AE256F9D47B3029CC48D3FA5426FB686
 ProjectName=Virtual Reality BP Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Development
-StagingDirectory=(Path=)
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Shipping
+BuildTarget=
+StagingDirectory=(Path="../../../../../../gamejam_june_21/Fiddelitass/")
 FullRebuild=False
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
-bNativizeBlueprintAssets=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
+bUseIoStore=False
 bGenerateChunks=False
+bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
 bBuildHttpChunkInstallData=False
-HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=True
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
-DefaultCulture=en
+LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyBlacklist=KeyStorePassword
+-IniKeyBlacklist=KeyPassword
+-IniKeyBlacklist=rsa.privateexp
+-IniKeyBlacklist=rsa.modulus
+-IniKeyBlacklist=rsa.publicexp
+-IniKeyBlacklist=aes.key
+-IniKeyBlacklist=SigningPublicExponent
+-IniKeyBlacklist=SigningModulus
+-IniKeyBlacklist=SigningPrivateExponent
+-IniKeyBlacklist=EncryptionKey
+-IniKeyBlacklist=IniKeyBlacklist
+-IniKeyBlacklist=IniSectionBlacklist
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="MainMenu")
++MapsToCook=(FilePath="TheStage_P")
+
