--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,8 +6,8 @@ ProjectName=Virtual Reality BP Game Template
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
-StagingDirectory=(Path="../../../../../../gamejam_june_21/Fiddelitass/")
-FullRebuild=False
+StagingDirectory=(Path="C:/gamejam_june_21/Builds")
+FullRebuild=True
 ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -65,6 +65,6 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="MainMenu")
-+MapsToCook=(FilePath="TheStage_P")
++MapsToCook=(FilePath="/Game/Levels/MainMenu")
++MapsToCook=(FilePath="/Game/Levels/TheStage_P")
 
