--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/MotionControllerMap.MotionControllerMap
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/Levels/MainMenu.MainMenu
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
@@ -9,8 +9,8 @@ FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+ServerDefaultMap=/Game/Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Core/Game/Fiddelitass_GM.Fiddelitass_GM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
